[package]
name = "to2txt"
version = "1.0.0-beta.2"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A zero-copy parser for the todo.txt format."
homepage = "https://to2txt.vercel.app/"
repository = "https://github.com/zacharygolba/to2txt"

[features]
default = []
serde = ["dep:serde", "chrono/serde"]

[dependencies]
chrono = "0.4"
nom = "8"
nom_locate = "5.0.0"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[workspace]
members = ["examples/to2txt-repl/wasm"]
