[package]
name = "to2txt"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2021"

[dependencies]
nom = "8"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.rayon]
optional = true
version = "1.2"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"
